Fix z-index of itens

--- a/src/styl/_menu.styl
+++ b/src/styl/_menu.styl
@@ -16,7 +16,7 @@ a.slideButton, .dosearch
     width 40px
     height 40px
     top 10px
-    z-index 31
+    z-index 17
 .slideButton
     left 10px
 .dosearch
