--- a/src/styl/_search.styl
+++ b/src/styl/_search.styl
@@ -11,7 +11,7 @@ input[type="search"]::-webkit-search-cancel-button
     -webkit-appearance none
 
 .search-wrapper
-    z-index 9999
+    z-index 19
     &.active
         transform translateY(0)
 
@@ -19,7 +19,7 @@ input[type="search"]::-webkit-search-cancel-button
     position relative
     top 0
     transform translateX(-200px)
-    z-index 9999
+    z-index 19
     width 100%
     opacity 0
     transition all 200ms 100ms cubic-bezier(0,0.6,0.4,1)
@@ -82,7 +82,7 @@ body
             position absolute
             top 0
             left 0
-            z-index 9001
+            z-index 18
             width 100%
             height 100%
             min-height 100%
